--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,16 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=2
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=2
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=2
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-line-wrap=words
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.enable-indent=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.groupAlignmentArrayInit=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.groupAlignmentAssignment=true
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 browser.reload.on.save=true
