--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "smarty/smarty": "^3.1",
     "monolog/monolog": "^1.23",
     "querypath/querypath": "^3.0",
-    "nesbot/carbon": "^1.22"
+    "nesbot/carbon": "^1.22",
+    "slim/slim": "^3.9",
+    "slim/twig-view": "^2.3"
   },
   "autoload": {
     "psr-4": {
