--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -15,6 +15,7 @@ auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.enabl
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.groupAlignmentArrayInit=true
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.groupAlignmentAssignment=true
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-php-smarty.smarty-framework=false
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 browser.reload.on.save=true
 code.analysis.excludes=
