--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "build": "npx webpack --config webpack.prod.js",
-    "start": "npx webpack --config webpack.dev.js",
+    "start": "npx webpack --config webpack.dev.js --display-modules",
     "watch": "npx webpack --watch --config webpack.dev.js"
   },
   "repository": {
@@ -32,11 +32,13 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.6.1",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "js-levenshtein": "^1.1.3"
+    "js-levenshtein": "^1.1.3",
+    "popper.js": "^1.12.9"
   }
 }
