--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,9 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.8",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1"
   },
