--- a/client/package.json
+++ b/client/package.json
@@ -39,10 +39,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "worker-loader": "^1.1.0"
   },
   "dependencies": {
-    "js-levenshtein": "^1.1.3",
     "popper.js": "^1.12.9"
   }
 }
