--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,7 @@
     "worker-loader": "^1.1.0"
   },
   "dependencies": {
-    "date-fns": "^1.29.0",
+    "luxon": "^0.3.0",
     "popper.js": "^1.12.9"
   }
 }
