--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,8 @@ insert_final_newline = true
 
 [*.php]
 indent_size = 2
+
+[*.md]
+indent_size = 2
+#fucks with .md
+trim_trailing_whitespace = false
