update coding standards to use psr-2 :v

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,15 +5,28 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=2
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=4
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=2
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=2
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-line-wrap=words
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.alignMultilineCallArgs=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.alignMultilineImplements=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.alignMultilineMethodParams=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.blankLinesAfterFunction=0
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.classDeclBracePlacement=NEW_LINE
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.enable-indent=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.expand-tabs=true
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.groupAlignmentArrayInit=true
 auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.groupAlignmentAssignment=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.indent-shift-width=4
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.methodDeclBracePlacement=NEW_LINE
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceBeforeAnonymousClassParen=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaces-per-tab=4
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.tab-size=4
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.text-line-wrap=words
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-php-smarty.smarty-framework=false
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
@@ -28,4 +41,5 @@ source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
+testing.providers=
 web.root=.
