--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ include.path=\
     ${php.global.include.path}
 php.version=PHP_71
 project.license=mit
+project.licensePath=./nbproject/licenseheader.txt
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
