--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "nesbot/carbon": "^1.22",
         "slim/slim": "^3.9",
         "slim/twig-view": "^2.3",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "aws/aws-sdk-php": "^3.52"
     },
     "autoload": {
         "psr-4": {
