--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine On
+
+RewriteRule ^vsrc/(.*)?$ /client/dist/$1 [L,NC]
+
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^ index.php [QSA,L]
